// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The \`init\` command throws an error if you don't pass an argument for the project type 1`] = `
"Command failed: ./bin/run init
 [31m›[39m   Error: command init not found
"
`;

exports[`The \`init\` command throws an error when you pass an invalid flag 1`] = `
"Command failed: ./bin/run init rust
 [31m›[39m   Error: command init not found
"
`;
